--- a/MasterchefBrasil_Clustering.ipynb
+++ b/MasterchefBrasil_Clustering.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# Senha utilizada para me conectar ao MySQL server\n",
-    "password = \"Bea@2023\""
+    "password = \"Example\""
    ]
   },
   {
